[package]
name = "measure"
version = "0.2.2"
authors = ["museun@outlook.com"]
edition = "2018"
license = "0BSD"

[dependencies.winapi]
version = "0.3.8"
features = [ 
    "winnt",
    "processthreadsapi",
    "minwinbase",
    "winbase",
    "jobapi2",
    "handleapi",
    "synchapi",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
